# minibot

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  TODO.md  config.example-prod.toml  config.example.lua  config.example.toml  config.yolo.lua  config.yolo.toml  docker-compose.yml  docker-requirements.txt  minibot.service  pyproject.toml  pytest.ini
.agents/skills/minibot-create-tool/: SKILL.md
.agents/skills/python-hex-review/: SKILL.md
.github/workflows/: ci.yml  docs.yml
.opencode/skills/openai-tool-schema-strict/: SKILL.md
agents/: browser_agent.md  data_agent.md  general.md  playwright_mcp_agent.md  shell_agent.md  workspace_manager_agent.md
docs/: agents.rst  architecture.rst  audio.rst  conf.py  config.rst  getting_started.rst  index.rst  mcp.rst  prompts.rst  rag.rst  scheduler.rst  security.rst  tools.rst
lua_tools/: example_echo.lua
minibot/adapters/: sqlalchemy_utils.py
minibot/adapters/config/: loader.py  lua_serializer.py  schema.py
minibot/adapters/container/: __init__.py  app_container.py
minibot/adapters/files/: local_storage.py
minibot/adapters/jobs/: __init__.py  sqlalchemy_job_store.py
minibot/adapters/logging/: setup.py
minibot/adapters/lua/: runtime.py
minibot/adapters/mcp/: __init__.py  client.py
minibot/adapters/memory/: kv_sqlalchemy.py  sqlalchemy.py
minibot/adapters/qdrant/: __init__.py  client.py
minibot/adapters/scheduler/: sqlalchemy_prompt_store.py
minibot/adapters/tasks/: manager.py  worker.py
minibot/app/: __init__.py  agent_definitions_loader.py  agent_job_service.py  agent_orchestrator.py  agent_policies.py  agent_registry.py  agent_runtime.py  config_cli.py  console.py  daemon.py  delegation_trace.py  dispatcher.py  environment_context.py  event_bus.py  incoming_files_context.py  job_supervisor_service.py  job_worker.py  llm_client_factory.py  mcp_tool_name.py  post_answer_gate.py  response_parser.py  runtime_limits.py  runtime_structured_output.py  scheduler_service.py  skill_definitions_loader.py  skill_registry.py  token_limits_autoconfig.py  tool_capabilities.py  tool_guardrail_validator.py  tool_policy_utils.py  tool_use_guardrail.py
minibot/app/handlers/: __init__.py  llm_handler.py
minibot/core/: agent_runtime.py  agents.py  channels.py  events.py  files.py  jobs.py  memory.py  skills.py
minibot/llm/: provider_factory.py
minibot/llm/providers/: __init__.py  openai_responses.py
minibot/llm/services/: __init__.py  client_bootstrap.py  compaction.py  continue_loop.py  debug_logging.py  generation_loop.py  models.py  provider_capabilities.py  (+13 more)
minibot/rag/: chunking.py  document_ingestion.py  embeddings.py  reranking.py  retrieval.py
minibot/shared/: assistant_response.py  console_compat.py  datetime_utils.py  frontmatter.py  json_schema.py  parse_utils.py  path_utils.py  prompt_loader.py  retries.py  utils.py
prompts/: compact.md  main_agent_system.md
prompts/channels/: console.md  telegram.md
prompts/policies/: delegation.md  tool_usage.md
scripts/: rag_clear_collection.sh
tests/: config.test.lua  config.test.toml  conftest.py  test_agent_definitions_loader.py  test_agent_delegate_async_contract.py  test_agent_delegate_attachments.py  test_agent_delegate_tool.py  test_agent_job_store.py  test_agent_policies.py  test_agent_runtime.py  test_agents_functional.py  test_app_container.py  test_apply_patch_tool.py  test_audio_auto_transcription_service.py  test_audio_transcription_tool.py  test_bash_tool.py  test_calculator_tool.py  test_channel_file_sender_tool.py  test_chat_memory_tool.py  test_config.py  test_config_cli.py  test_console_command.py  test_console_functional.py  test_console_service.py  test_daemon.py  test_debug_logging.py  test_description_loader.py  test_dispatcher.py  test_e2e_console_agents_and_tools.py  test_environment_context.py  test_event_bus.py  test_event_bus_extra.py  test_file_storage_tools.py  test_grep_tool.py  test_http_client_tool.py  test_job_supervisor_service.py  test_json_schema_utils.py  test_kv_memory.py  test_kv_tools.py  test_llm_client_factory.py  (+44 more)
tools/: activate_skill.md  apply_patch.md  bash.md  calculate_expression.md  cancel_scheduled_prompt.md  chat_history_info.md  chat_history_trim.md  code_read.md  current_datetime.md  delete_scheduled_prompt.md  fetch_agent_info.md  filesystem.md  glob_files.md  grep.md  http_request.md  index.md  invoke_agent.md  list_scheduled_prompts.md  list_skills.md  lua_custom.md  mcp_dynamic_tools.md  memory.md  python_environment_info.md  python_execute.md  read_file.md  schedule.md  schedule_prompt.md  self_insert_artifact.md  transcribe_audio.md
(+88 files in other folders)
