[tool.poetry]
name = "minibot"
version = "0.0.1"
description = ""
authors = ["sonic182 <johander1822@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "minibot" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiosonic = "^0.30.1"
llm-async = "^0.3.3"
aiogram = "^3.24.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
aiosqlite = "^0.22.1"
logfmter = "^0.0.11"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
