[tool.poetry]
name = "minibot"
version = "0.0.1"
description = ""
authors = ["sonic182 <johander1822@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "minibot" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiosonic = "^0.30.1"
llm-async = "^0.3.3"
aiogram = "^3.24.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
aiosqlite = "^0.22.1"
logfmter = "^0.0.11"
playwright = {version = "^1.56.0", optional = true}
pyyaml = "^6.0.3"
selectolax = "^0.4.6"

[tool.poetry.extras]
playwright = ["playwright"]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
pyright = "^1.1.408"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
# Enable the flake8-print plugin rule T201 to ban print() statements
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "T201", # Ban print statements
]
# Exclude certain directories from linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist"
]
