[tool.poetry]
name = "minibot"
version = "0.0.3"
description = "Self-hosted Telegram-first AI assistant with async tooling, memory, and scheduling."
authors = ["sonic182 <johander1822@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sonic182/minibot"
repository = "https://github.com/sonic182/minibot"
documentation = "https://github.com/sonic182/minibot#readme"
keywords = ["telegram", "assistant", "llm", "bot", "automation", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "minibot" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiosonic = "^0.30.1"
llm-async = "^0.3.3"
aiogram = "^3.24.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
aiosqlite = "^0.22.1"
logfmter = "^0.0.11"
playwright = {version = "^1.56.0", optional = true}
selectolax = {version = "^0.4.6", optional = true}
markdownify = {version = "^1.2.2", optional = true}
mcp = {version = "^1.0.0", optional = true}
uvicorn = {version = "^0.35.0", optional = true}


[tool.poetry.extras]
playwright = ["playwright", "selectolax", "markdownify"]
mcp = ["mcp", "uvicorn"]



[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
pyright = "^1.1.408"

[tool.poetry.scripts]
minibot = "minibot.app.daemon:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
# Enable the flake8-print plugin rule T201 to ban print() statements
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "T201", # Ban print statements
]
# Exclude certain directories from linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist"
]
